--- a/.gitattributes
+++ b/.gitattributes
@@ -3,4 +3,5 @@
 *.js linguist-detectable=false  
 *.html linguist-detectable=false  
 *.xml linguist-detectable=false    
-*.css linguist-detectable=false    
+*.css linguist-detectable=false
+*.c++ linguist-detectable=false    
